src/ABCo.Multicam.Client.Blazor/Views/Menus/SidePanel.razor.css
::deep .section {
    padding: 10px;
    width: 100%;
    box-sizing: border-box;
}

::deep .sectionTitle {
    text-decoration: underline;
    text-align: center;
    margin: 5px 0 20px 0;
}

::deep .sectionSeparator {
    border: none;
    height: 3px;
    background: var(--gradient-3431);
}

::deep .gridTitle {
    font-weight: bold;
}

::deep .grid {
    gap: 10px;
    padding: 0 10px;
    box-sizing: border-box;
    width: 100%;
}

::deep .boxedPortion {
    margin: 10px 10px 0 10px;
    padding: 10px;
}

::deep .indexedListItem {
    margin-top: 10px;
    padding: 10px;
    background-color: var(--col-panellistitem);
}

::deep .indexedListItem .index {
    padding: 10px;
    font-weight: bold;
}

.sidePanel {
    width: 100%;
    height: 100%;
    background-color: var(--col-panelback);
    display: grid;
    grid-template-columns: 1fr 3px;
    grid-template-areas: "content rightBorder";
    max-height: 100%;
    overflow-y: auto;
}

.sidePanel .content {
    grid-area: content;
    /*overflow-x: hidden;*/
}

.sidePanel .rightBorder {
    grid-area: rightBorder;
    background: linear-gradient(0deg, var(--col-gradient1) 0%, var(--col-gradient2) 50%, var(--col-gradient1) 100%);
    height: 100%;
}

